--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.0"
+tokio = { version = "1", features = ["full"] }
+paho-mqtt = "0.12"
+byteorder = "1.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+futures-lite = "*"
